{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 54,
  "lineage": "ac7d21c9-9bac-906a-5313-ca4750099d2b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:security-group/sg-0fe5510839c8a338d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fe5510839c8a338d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8",
                  "172.16.0.0/12",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "all_worker_management2022050210275926060000000a",
            "name_prefix": "all_worker_management",
            "owner_id": "746119955855",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:security-group/sg-0275fdfd1119c16c6",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0275fdfd1119c16c6",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/8"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_one20220502102759260400000009",
            "name_prefix": "worker_group_mgmt_one",
            "owner_id": "746119955855",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:security-group/sg-07bc25a903ad8e408",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-07bc25a903ad8e408",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "worker_group_mgmt_two2022050210280251620000000b",
            "name_prefix": "worker_group_mgmt_two",
            "owner_id": "746119955855",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:security-group/sg-0a2b1cbec06d5c3e5",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0a2b1cbec06d5c3e5",
            "ingress": [],
            "name": "scmDrReddys-eks-B9uzNjNF2022050210280313440000000d",
            "name_prefix": "scmDrReddys-eks-B9uzNjNF",
            "owner_id": "746119955855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scmDrReddys-eks-B9uzNjNF-eks_cluster_sg"
            },
            "tags_all": {
              "Name": "scmDrReddys-eks-B9uzNjNF-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:security-group/sg-0a40f68dab902ed31",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-0a40f68dab902ed31",
            "ingress": [],
            "name": "scmDrReddys-eks-B9uzNjNF2022050210280309250000000c",
            "name_prefix": "scmDrReddys-eks-B9uzNjNF",
            "owner_id": "746119955855",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "scmDrReddys-eks-B9uzNjNF-eks_worker_sg",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "owned"
            },
            "tags_all": {
              "Name": "scmDrReddys-eks-B9uzNjNF-eks_worker_sg",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-332104463",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a2b1cbec06d5c3e5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-2878773476",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a2b1cbec06d5c3e5",
            "self": false,
            "source_security_group_id": "sg-0a40f68dab902ed31",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-2500951294",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a40f68dab902ed31",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-588645352",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a40f68dab902ed31",
            "self": false,
            "source_security_group_id": "sg-0a2b1cbec06d5c3e5",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-3447649496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a40f68dab902ed31",
            "self": false,
            "source_security_group_id": "sg-0a2b1cbec06d5c3e5",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2155977423",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a40f68dab902ed31",
            "self": false,
            "source_security_group_id": "sg-0a40f68dab902ed31",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043c38d29cf180f1d",
            "domain": "vpc",
            "id": "eipalloc-043c38d29cf180f1d",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-205-103-41.compute-1.amazonaws.com",
            "public_ip": "52.205.103.41",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "scmDrReddys-vpc-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:internet-gateway/igw-0f9b0f2f9efb34452",
            "id": "igw-0f9b0f2f9efb34452",
            "owner_id": "746119955855",
            "tags": {
              "Name": "scmDrReddys-vpc",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043c38d29cf180f1d",
            "connectivity_type": "public",
            "id": "nat-0eea5c58ac15a6aca",
            "network_interface_id": "eni-04a47b6f395837a5a",
            "private_ip": "10.0.4.13",
            "public_ip": "52.205.103.41",
            "subnet_id": "subnet-0060791ebf520e58f",
            "tags": {
              "Name": "scmDrReddys-vpc-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-007c5b3244eb5882d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0eea5c58ac15a6aca",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-007c5b3244eb5882d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f9b0f2f9efb34452",
            "id": "r-rtb-0de95a5b55fd2fad91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0de95a5b55fd2fad9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:route-table/rtb-007c5b3244eb5882d",
            "id": "rtb-007c5b3244eb5882d",
            "owner_id": "746119955855",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "scmDrReddys-vpc-private",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-private",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:route-table/rtb-0de95a5b55fd2fad9",
            "id": "rtb-0de95a5b55fd2fad9",
            "owner_id": "746119955855",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "scmDrReddys-vpc-public",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-public",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db8af5307789562e",
            "route_table_id": "rtb-007c5b3244eb5882d",
            "subnet_id": "subnet-045197a46714aae66"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0379296f0d4722717",
            "route_table_id": "rtb-007c5b3244eb5882d",
            "subnet_id": "subnet-0de499d3a2e23ff46"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-097d028574d6b5995",
            "route_table_id": "rtb-007c5b3244eb5882d",
            "subnet_id": "subnet-0aa1e27e089217eaa"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-021ae7584be8f9a87",
            "route_table_id": "rtb-0de95a5b55fd2fad9",
            "subnet_id": "subnet-0060791ebf520e58f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0663ac37f6e0a52a9",
            "route_table_id": "rtb-0de95a5b55fd2fad9",
            "subnet_id": "subnet-02c624d97bcb07f98"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012ab70703b8007bc",
            "route_table_id": "rtb-0de95a5b55fd2fad9",
            "subnet_id": "subnet-0c33836bb1e566b4e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:subnet/subnet-045197a46714aae66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-045197a46714aae66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746119955855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scmDrReddys-vpc-private-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-private-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:subnet/subnet-0de499d3a2e23ff46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de499d3a2e23ff46",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746119955855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scmDrReddys-vpc-private-us-east-1b",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-private-us-east-1b",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:subnet/subnet-0aa1e27e089217eaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa1e27e089217eaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "746119955855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scmDrReddys-vpc-private-us-east-1c",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-private-us-east-1c",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:subnet/subnet-0060791ebf520e58f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0060791ebf520e58f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746119955855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scmDrReddys-vpc-public-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-public-us-east-1a",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:subnet/subnet-02c624d97bcb07f98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c624d97bcb07f98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746119955855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scmDrReddys-vpc-public-us-east-1b",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-public-us-east-1b",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:subnet/subnet-0c33836bb1e566b4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c33836bb1e566b4e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "746119955855",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scmDrReddys-vpc-public-us-east-1c",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc-public-us-east-1c",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d08ccb558b11f501"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:746119955855:vpc/vpc-0d08ccb558b11f501",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08d259822ea9621e1",
            "default_route_table_id": "rtb-00c5e21bf9e1e9ee7",
            "default_security_group_id": "sg-0fbc2ca8d36f3eea6",
            "dhcp_options_id": "dopt-fec0f485",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d08ccb558b11f501",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-00c5e21bf9e1e9ee7",
            "owner_id": "746119955855",
            "tags": {
              "Name": "scmDrReddys-vpc",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            },
            "tags_all": {
              "Name": "scmDrReddys-vpc",
              "kubernetes.io/cluster/scmDrReddys-eks-B9uzNjNF": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}